maze initializing incorrectly